update homepage location

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <header>
-        <img src="photo/chathub.jpeg" alt="Loading image" class="chathub" />
+        <img src="hub.JPG" alt="Loading image" class="chathub" />
       </header>
       <div>
         <div class="row">
