--- a/public/homepage.html
+++ b/public/homepage.html
@@ -22,24 +22,29 @@
         <div class="row">
           <div class="col-md-10 left-box">
             <div>choose category</div>
-            <div class="row">
-              <div class="col-6 mt-3"><button class="col-10">ROOM</button></div>
-              <div class="col-6 mt-3"><button class="col-10">ROOM</button></div>
-              <div class="col-6 mt-3"><button class="col-10">ROOM</button></div>
-              <div class="col-6 mt-3"><button class="col-10">ROOM</button></div>
+            <div>--------------------</div>
+            <div class="room-container row">
+              <div class="room-template col-6">
+                <button class="room-button"></button>
+              </div>
             </div>
           </div>
           <div class="col-md-2">
             <br />
             <div><button>1. Quick</button></div>
-            <div><button>2. Create</button></div>
+            <div>
+              <a href="/createRoom.html"><button>2. Create</button></a>
+            </div>
             <div><button>3. Search</button></div>
+            <div><button>4. public chat room</button></div>
             <div></div>
           </div>
         </div>
       </div>
     </div>
     <footer>EDIT PROFILE</footer>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="room.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
