--- a/public/login.html
+++ b/public/login.html
@@ -6,12 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>login</title>
     <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
+
 
     <link
       rel="stylesheet"
@@ -23,67 +18,72 @@
   <body>
     <div class="logo-container">
       <img src="hub.JPG" alt="Loading" class="logo" />
+        <div class="form-box">
+          <div class="button-box">
+            <div id="btn"></div>
+            <button type="button" class="toggle-btn" onclick="login()">
+              Login
+            </button>
+            <button type="button" class="toggle-btn" onclick="register()">
+              Register
+            </button>
+          </div>
+            
+              <div class="social-icons">
+                <i class="bi bi-facebook"></i>
+                <i class="bi bi-google"></i>
+                <i class="bi bi-twitter"></i>
+              </div>
+       
 
-      <div class="form-box">
-        <div class="button-box">
-          <div id="btn"></div>
-          <button type="button" class="toggle-btn" onclick="login()">
-            Login
-          </button>
-          <button type="button" class="toggle-btn" onclick="register()">
-            Register
-          </button>
+              <form id="login" class="input-group">
+                <input
+                  type="text"
+                  class="input-field"
+                  placeholder="User Id"
+                  required
+                />
+                <input
+                  type="text"
+                  class="input-field"
+                  placeholder="Enter Password"
+                  required
+                />
+                <button type="submit" class="submit-btn">
+                  <span class="text">Login</span>
+                </button>
+              </form>
+              <form id="register" class="input-group">
+                <input
+                  type="text"
+                  class="input-field"
+                  placeholder="User Id"
+                  required
+                />
+                <input
+                  type="text"
+                  class="input-field"
+                  placeholder="Email"
+                  required
+                />
+                <input
+                  type="text"
+                  class="input-field remove-margin"
+                  placeholder="Enter Password"
+                  required
+                />
+                <input type="checkbox"class="check-box" /><span class="line">
+                  The person Register must be at least 18 years old.</span
+                >
+                <button type="submit" class="submit-btn">
+                  <span class="text">Register</span>
+                </button>
+              </form>
+            </div>
         </div>
-        <div class="social-icons">
-          <i class="bi bi-facebook"></i>
-          <i class="bi bi-google"></i>
-          <i class="bi bi-twitter"></i>
-        </div>
-
-        <form id="login" class="inputgroup">
-          <input
-            type="text"
-            class="input-field"
-            placeholder="User Id"
-            required
-          />
-          <input
-            type="text"
-            class="input-field"
-            placeholder="Enter Password"
-            required
-          />
-          <button type="submit" class="submit-btn">Login</button>
-        </form>
-        <form id="register" class="inputgroup">
-          <input
-            type="text"
-            class="input-field"
-            placeholder="User Id"
-            required
-          />
-          <input type="text" class="input-field" placeholder="Email" required />
-          <input
-            type="text"
-            class="input-field"
-            placeholder="Enter Password"
-            required
-          />
-          <input type="checkbox" class="check-box" /><span>
-            The person Register must be at least 18 years old.</span
-          >
-          <button type="submit" class="submit-btn">Register</button>
-        </form>
       </div>
     </div>
-    <script>
-      src =
-        "https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js";
-      integrity =
-        "sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3";
-      crossorigin = "anonymous";
-
-      src = "login.js";
+    <script src = "login.js"></script>
     </script>
   </body>
 </html>
