--- a/public/createRoom.html
+++ b/public/createRoom.html
@@ -10,6 +10,30 @@
     <form action="/demo" method="post">
       <label for="topic">Topic</label>
       <input type="text" name="content" id="topic" />
+      <label for="password">Password(optional)</label>
+      <input type="text" name="password" id="password" />
+      <!-- <label for="checkbox">Is Active?</label>
+      <input type="checkbox" id="checkbox" name="active" value="true" /> -->
+      <div class="head-count">
+        <select name="headNumber">
+          <option value="0">Room size</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="5">5</option>
+          <option value="10">10</option>
+        </select>
+      </div>
+      <div class="timer">
+        <select name="deleteTime">
+          <option value="0">Time (seconds)</option>
+          <option value="5000">5</option>
+          <option value="10000">10</option>
+          <option value="30000">30</option>
+          <option value="60000">60</option>
+          <option value="99999999">FOREVER</option>
+        </select>
+      </div>
+
       <button type="submit" onclick="submit()">Submit</button>
     </form>
   </body>
