--- a/public/homepage.html
+++ b/public/homepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home Page</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,8 +24,15 @@
             <div>choose category</div>
             <div>--------------------</div>
             <div class="room-container row">
-              <div class="room-template col-6">
-                <button class="room-button"></button>
+              <div class="room-template col-6 mt-3">
+                <div class="room-design">
+                  <div class="room-id"></div>
+                  <div class="room-header">
+                    <div class="room-content"></div>
+                    <div class="room-headcount"></div>
+                  </div>
+                  <button class="room-button">Enter</button>
+                </div>
               </div>
             </div>
           </div>
