able to insert delete time to database when creating room

--- a/public/createRoom.html
+++ b/public/createRoom.html
@@ -24,12 +24,12 @@
         </select>
       </div>
       <div class="timer">
-        <select name="deleteTime">
-          <option value="0">Time (seconds)</option>
-          <option value="5000">5</option>
-          <option value="10000">10</option>
-          <option value="30000">30</option>
-          <option value="60000">60</option>
+        <select name="addTime">
+          <option value="0">Time (minutes)</option>
+          <option value="5">5</option>
+          <option value="10">10</option>
+          <option value="30">30</option>
+          <option value="60">60</option>
           <option value="99999999">FOREVER</option>
         </select>
       </div>
