--- a/public/homepage.html
+++ b/public/homepage.html
@@ -57,5 +57,6 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
   </body>
 </html>
