--- a/public/chatroom.html
+++ b/public/chatroom.html
@@ -20,12 +20,15 @@
 
         <div class="tab-content">
             <div class="tab-pane message-body active" id="inbox-message-1">
+                
                 <div class="message-chat">
+
                     <div class="chat-body">
-                        <div class="message info">
+
+                        <div class="message receiveMsg">
                             <div class="message-body">
                                 <div class="message-info">
-                                    <h4> Hardy </h4>
+                                    <h4 id="user_id"> Hardy </h4>
                                     <h5> <i class="fa fa-clock-o"></i> 2:25 PM </h5>
                                 </div>
                                 <hr>
@@ -52,7 +55,7 @@
                             <br>
                         </div>
 
-                        <div class="message info">
+                        <div class="message receiveMsg">
                             <div class="message-body">
                                 <div class="message-info">
                                     <h4> Dennis </h4>
@@ -67,25 +70,28 @@
                         </div>
                     </div>
 
-                    <div class="chat-footer">
-                        <textarea class="send-message-text"></textarea>
-                        <label class="upload-file">
-                            <input type="file" required="">
-                            <i class="fa fa-paperclip"></i>
-                        </label>
-                        <button type="button" class="send-message-button btn-info"> <i class="fa fa-send"></i> </button>
-                    </div>
                 </div>
+
+                <form method="post" action="/message" class="chat-footer">
+                    <textarea class="send-message-text"></textarea>
+                    <label class="upload-file">
+                        <input type="file" required="">
+                        <i class="fa fa-paperclip"></i>
+                    </label>
+                    <button type="button" class="send-message-button btn-info"> <i class="fa fa-send"></i> </button>
+                </form>
             </div>
         </div>
     </div>
 </div>
+<script
+src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+crossorigin="anonymous"
+></script>
+<script src="/socket.io/socket.io.js"></script>
 
-    <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"
-  ></script>
+<script src="chatroom.js"></script>
 </body>
 </html>
 
