added dynamic countdown

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -26,12 +26,17 @@
             <div class="room-container row">
               <div class="room-template col-6 mt-3">
                 <div class="room-design">
-                  <div class="room-id"></div>
+                  <div class="room-id">
+                    <div>id: 1</div>
+                  </div>
                   <div class="room-header">
                     <div class="room-content"></div>
                     <div class="room-headcount"></div>
                   </div>
-                  <button class="room-button">Enter</button>
+                  <div>
+                    <div class="time-remain"></div>
+                    <button class="room-button">Enter</button>
+                  </div>
                 </div>
               </div>
             </div>
