--- a/public/homepage.html
+++ b/public/homepage.html
@@ -26,10 +26,11 @@
         <div class="d-flex justify-content-between">
           <img src="hub.JPG" alt="Loading image" class="chathub" />
           <div>
-            <div>Hello Username</div>
-            <!-- <button onclick="logout()">
+            <div>Hello</div>
+            <div class="username">Username</div>
+            <button onclick="logout()">
               <i class="fa-solid fa-arrow-right-from-bracket"></i>
-            </button> -->
+            </button>
           </div>
         </div>
       </header>
