--- a/public/homepage.html
+++ b/public/homepage.html
@@ -19,6 +19,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="homepage.css" />
+    <link rel="stylesheet" href="edit.css" />
   </head>
 
   <body>
@@ -35,6 +36,12 @@
           </div>
         </div>
       </header>
+      <div id="modalContainer" class="modalContainer">
+        <div class="modal">
+          <h1>Edit Profile</h1>
+          <button id="close" class="close">close me</button>
+        </div>
+      </div>
       <div>
         <div class="row">
           <div class="col-md-10 left-box">
@@ -87,12 +94,15 @@
 
     <div class="modal show-modal">model2</div>
 
-    <footer>EDIT PROFILE</footer>
+    <footer>
+      <button id="editBtn">Edit</button>
+    </footer>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="modal.js"></script>
     <script src="room.js"></script>
     <script src="homepage.js"></script>
+    <script src="edit.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
