--- a/public/homepage.html
+++ b/public/homepage.html
@@ -37,9 +37,10 @@
         </div>
       </header>
       <div id="modalContainer" class="modalContainer">
-        <div class="modal">
+        <div class="modalbox">
           <h1>Edit Profile</h1>
-          <button id="close" class="close">close me</button>
+          <p>hello i m a modal</p>
+          <button id="close" class="close">close</button>
         </div>
       </div>
       <div>
