--- a/public/login.html
+++ b/public/login.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="login.css" />
   </head>
   <body>
+    <div class="flash"></div>
     <div class="logo-container">
       <img src="hub.JPG" alt="Loading" class="logo" />
     </div>
@@ -94,6 +95,7 @@
             </div>
         </div>
       </div>
+    </div>
    
     <script src = "login.js"></script>
     </script>
