finish sent email

--- a/public/login.html
+++ b/public/login.html
@@ -53,10 +53,12 @@
                   placeholder="Enter Password"
                   required
                 />
+               
                 <button type="submit" class="submit-btn">
                   <span class="text">Login</span>
                 </button>
               </form>
+              <a href="/forgot-password"><button class="forgotpassword">forgot Password</button></a>
               <form action="/register" method ="post" id="register" class="input-group">
                
                 <input
