--- a/public/homepage.html
+++ b/public/homepage.html
@@ -40,30 +40,15 @@
           <img class="usericon" />
           <form action="/iconupload">
             <input type="file" id="myFile" name="filename" />
-            <p>
-              <input
-                type="text"
-                class="input-field"
-                name="username"
-                placeholder="Username"
-                required
-              />
-              <input
-                type="email"
-                class="input-field"
-                name="email"
-                placeholder="Email"
-                required
-              />
-              <input
-                id="pwInput"
-                type="password"
-                class="input-field remove-margin"
-                name="password"
-                placeholder="Enter Password"
-                required
-              />
-            </p>
+            <form action="/edit.ts">
+              <label for="name">New Username:</label>
+              <input type="text" id="username" name="username" /><br /><br />
+              <label for="password">New Password:</label>
+              <input type="text" id="password" name="password" /><br /><br />
+              <label for="password2">Confirm Your Password:</label>
+              <input type="text" id="password2" name="password2" /><br /><br />
+              <input type="submit" value="Submit" />
+            </form>
             <div class="heart" onclick="heart()">
               <i class="fa-solid fa-heart fa-beat"></i>
             </div>
