debugged the chatroom ordering problem

--- a/public/chatroom.html
+++ b/public/chatroom.html
@@ -20,7 +20,7 @@
 <div class="container">
     <div class="panel messages-panel">
         <div class="message-chat">
-            <div class="message receiveMsg">
+            <!-- <div class="message receiveMsg">
                 <div class="message-body">
                     <div class="message-info">
                         <h4 id="user_id"> Hardy </h4>
@@ -32,9 +32,9 @@
                     </div>
                 </div>
                 <br>
-            </div>
+            </div> -->
 
-            <div class="message my-message">
+            <!-- <div class="message my-message">
                 <div class="message-body">
                     <div class="message-body-inner">
                         <div class="message-info">
@@ -48,21 +48,7 @@
                     </div>
                 </div>
                 <br>
-            </div>
-
-            <div class="message receiveMsg">
-                <div class="message-body">
-                    <div class="message-info">
-                        <h4> Dennis </h4>
-                        <h5> <i class="fa fa-clock-o"></i> 2:32 PM </h5>
-                    </div>
-                    <hr>
-                    <div class="message-text">
-                        MegaBox.
-                    </div>
-                </div>
-                <br>
-            </div>
+            </div> -->
         </div>
     </div>
     <form method="post" action="/message" class="chat-footer">
