added category and selector

--- a/public/createRoom.html
+++ b/public/createRoom.html
@@ -33,6 +33,15 @@
           <option value="99">No Limit</option>
         </select>
       </div>
+      <div class="category">
+        <select name="category" required>
+          <option value="0">主題</option>
+          <option value="1">吹水台</option>
+          <option value="2">心事台</option>
+          <option value="3">體育台</option>
+          <option value="4">電玩台</option>
+        </select>
+      </div>
 
       <button type="submit" onclick="submit()">Submit</button>
     </form>
