finish edit rest username and password

--- a/public/login.html
+++ b/public/login.html
@@ -58,7 +58,7 @@
                   <span class="text">Login</span>
                 </button>
               </form>
-              <a href="/forgot-password"><button class="forgotpassword">forgot Password</button></a>
+              <a href="/forgot-password.html"><button class="forgotpassword" >forgot Password</button></a>
               <form action="/register" method ="post" id="register" class="input-group">
                
                 <input
