--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -8,14 +8,15 @@
   </head>
   <body>
     <h1>Reset password</h1>
-    <form action="" method="POST">
+    <form id="reset-password-form" action="" method="POST">
       <label for="password">Password</label>
       <input type="password" name="password" id="password" />
       <br />
       <label for="password2">Confirm Password</label>
-      <input type="password2" name="password2" id="password2" />
+      <input type="password" name="password2" id="password2" />
       <br />
       <input type="submit" value="reset password" />
     </form>
+    <script src="/reset-password.js"></script>
   </body>
 </html>
