--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -102,7 +102,7 @@
     </div>
 
     <footer>
-      <div id="editBtn" ><i class="fa-solid fa-cog fa-spin"></i></div>
+      <div id="editBtn" ><i class="fa-solid fa-gear"></i></div>
     </footer>
 
     <script src="/socket.io/socket.io.js"></script>
