--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -62,6 +62,7 @@
               <div class="cate-css" onclick="selectCate(value=2)">心事台</div>
               <div class="cate-css" onclick="selectCate(value=3)">體育台</div>
               <div class="cate-css" onclick="selectCate(value=4)">電玩台</div>
+              <div class="cate-css" onclick="showAll()">Show All</div>
             </div>
             <div>--------------------</div>
             <div class="room-container row">
@@ -89,12 +90,12 @@
           </div>
           <div class="col-md-2">
             <br />
-            <div><button>1. Quick</button></div>
+            <div><button onclick="quick()">1. Quick</button></div>
             <div>
               <a href="/createRoom.html"><button>2. Create</button></a>
             </div>
-            <div><button>3. Search</button></div>
-            <div><button>4. public chat room</button></div>
+            <div><button onclick="search()">3. Search</button></div>
+            <div><button onclick="public()">4. public chat room</button></div>
             <div>
           </div>
         </div>
