--- a/frontend/chatroom.html
+++ b/frontend/chatroom.html
@@ -18,10 +18,10 @@
 
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="container">
+    <div class="navigation-bar">
+        <h4 id="navigation-content">testing</h4>
+    </div>
     <div class="panel messages-panel">
-        <!-- <div class="navigation-bar">
-            <h4>testing</h4>
-        </div> -->
         <div class="message-chat">
             <!-- <div class="message receiveMsg">
                 <div class="message-body">
