--- a/frontend/chatroom.html
+++ b/frontend/chatroom.html
@@ -56,10 +56,10 @@
     </div>
     <form method="post" action="/message" class="chat-footer">
         <textarea class="send-message-text"></textarea>
-        <label class="upload-file">
+        <!-- <label class="upload-file">
             <input type="file" required="">
             <i class="fa fa-paperclip"></i>
-        </label>
+        </label> -->
         <button type="button" class="send-message-button btn-info"> <i class="fa fa-send"></i> </button>
     </form>
 </div>
