--- a/frontend/chatroom.html
+++ b/frontend/chatroom.html
@@ -19,7 +19,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="container">
     <div class="navigation-bar">
-        <h4 id="navigation-content">testing</h4>
+        <h4 id="navigation-content"></h4>
     </div>
     <div class="panel messages-panel">
         <div class="message-chat">
