--- a/frontend/chatroom.html
+++ b/frontend/chatroom.html
@@ -30,10 +30,10 @@
               <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3" id="userlistContainer">
+                <!-- <li class="nav-item">
                     <div class="userlist"></div>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
