--- a/frontend/chatroom.html
+++ b/frontend/chatroom.html
@@ -14,6 +14,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
         <link rel="stylesheet" href="chatroom.css" />
+        <link rel="stylesheet" href="pickname.css" />
 </head>
 
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
@@ -93,6 +94,7 @@
 <script src="/socket.io/socket.io.js"></script>
 
 <script src="chatroom.js"></script>
+<script src="pickname.js"></script>
 </body>
 
 </html>
