--- a/public/login.html
+++ b/public/login.html
@@ -81,6 +81,7 @@
                   type="password"
                   class="input-field remove-margin"
                   name="password"
+                  minlength="8" 
                   placeholder="Enter Password"
                   required
                />
