added security on roomID

--- a/frontend/createRoom.html
+++ b/frontend/createRoom.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Create Room</title>
+    <link rel="stylesheet" href="createRoom.css" />
   </head>
   <body>
     <form action="/demo" method="post">
@@ -13,8 +13,6 @@
       <input type="text" name="content" id="topic" required />
       <label for="password">Password(optional)</label>
       <input type="text" name="password" id="password" />
-      <!-- <label for="checkbox">Is Active?</label>
-      <input type="checkbox" id="checkbox" name="active" value="true" /> -->
       <div class="head-count">
         <select name="headNumber" required>
           <option value="0">Room size</option>
