--- a/frontend/createRoom.html
+++ b/frontend/createRoom.html
@@ -14,8 +14,8 @@
       <label for="password">Password(optional)</label>
       <input type="text" name="password" id="password" />
       <div class="head-count">
-        <select name="headNumber" required>
-          <option value="0">Room size</option>
+        <label for="headNumber">房間人數：</label>
+        <select name="headNumber" id="headNumber" required>
           <option value="2">2</option>
           <option value="3">3</option>
           <option value="5">5</option>
@@ -23,8 +23,8 @@
         </select>
       </div>
       <div class="timer">
-        <select name="addTime" required>
-          <option value="0">Time (minutes)</option>
+        <label for="addTime">房間限時：</label>
+        <select name="addTime" id="addTime" required>
           <option value="5">5</option>
           <option value="10">10</option>
           <option value="30">30</option>
@@ -33,8 +33,8 @@
         </select>
       </div>
       <div class="category">
-        <select name="category" required>
-          <option value="0">主題</option>
+        <label for="category">主題：</label>
+        <select name="category" id="category" required>
           <option value="1">吹水台</option>
           <option value="2">心事台</option>
           <option value="3">體育台</option>
