--- a/frontend/createRoom.html
+++ b/frontend/createRoom.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,13 +10,11 @@
     <form action="/demo" method="post">
       <label for="topic">Topic</label>
       <input type="text" name="content" id="topic" required />
-      <label for="password">Password(optional)</label>
-      <input type="text" name="password" id="password" />
-      <!-- <label for="checkbox">Is Active?</label>
-      <input type="checkbox" id="checkbox" name="active" value="true" /> -->
+      <label for="password">Password(optional): </label>
+      <div><input type="text" name="password" id="password" /></div>
       <div class="head-count">
-        <select name="headNumber" required>
-          <option value="0">Room size</option>
+        <label for="headNumber">房間人數：</label>
+        <select name="headNumber" id="headNumber" required>
           <option value="2">2</option>
           <option value="3">3</option>
           <option value="5">5</option>
@@ -25,8 +22,8 @@
         </select>
       </div>
       <div class="timer">
-        <select name="addTime" required>
-          <option value="0">Time (minutes)</option>
+        <label for="addTime">房間限時：</label>
+        <select name="addTime" id="addTime" required>
           <option value="5">5</option>
           <option value="10">10</option>
           <option value="30">30</option>
@@ -35,8 +32,8 @@
         </select>
       </div>
       <div class="category">
-        <select name="category" required>
-          <option value="0">主題</option>
+        <label for="category">主題：</label>
+        <select name="category" id="category" required>
           <option value="1">吹水台</option>
           <option value="2">心事台</option>
           <option value="3">體育台</option>
