--- a/frontend/homepage.html
+++ b/frontend/homepage.html
@@ -27,7 +27,7 @@
       <div><img src="hub.JPG" alt="Loading image" class="chathub" /></div>
       <div class="logoutArea">
         <div>Hello</div>
-        <div class="username">Username</div>
+        <div class="username" id="username">Username</div>
         <div onclick="logout()">
           <i class="fa-solid fa-arrow-right-from-bracket"></i>
         </div>
