--- a/public/login.html
+++ b/public/login.html
@@ -88,7 +88,7 @@
                   <div id="text">At least 8 characters </div>
               <label for="gender-select">Choose your gender:</label>
 
-              <select name="gender" id="gender">
+              <select name="gender" id="gender" required>
                   <option value="">--Please choose an option--</option>
                   <option value="M">Male</option>
                   <option value="F">Female</option>
