--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -10,10 +10,22 @@
     <h1>Reset password</h1>
     <form id="reset-password-form" action="" method="POST">
       <label for="password">Password</label>
-      <input type="password" name="password" id="password" />
+      <input
+        type="password"
+        name="password"
+        id="password"
+        minlength="8"
+        required
+      />
       <br />
       <label for="password2">Confirm Password</label>
-      <input type="password" name="password2" id="password2" />
+      <input
+        type="password"
+        name="password2"
+        id="password2"
+        minlength="8"
+        required
+      />
       <br />
       <input type="submit" value="reset password" />
     </form>
