(UI) Secret Chat Room Show Which Two UserName at Topic

--- a/protected/secretroom.html
+++ b/protected/secretroom.html
@@ -20,10 +20,10 @@
 
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="container">
-    <!-- <div class="navigation-bar">
-        <h4 id="navigation-content-roomID"></h4>
-        <h3 id="navigation-content-topic"></h3>
-    </div> -->
+    <div class="navigation-bar">
+        <!-- <h4 id="navigation-content-roomID">s</h4> -->
+        <h3 id="navigation-content-topic">私人房間</h3>
+    </div>
     <div class="panel messages-panel">
         <div class="message-chat">
             
