(TOFIX) Hide Register Gender default value(cuase we no time to code a checking logic)

--- a/public/login.html
+++ b/public/login.html
@@ -89,7 +89,7 @@
               <label for="gender-select">Choose your gender:</label>
 
               <select name="gender" id="gender" required>
-                  <option value="">--Please choose an option--</option>
+                  <!-- <option value="">--Please choose an option--</option> -->
                   <option value="M">Male</option>
                   <option value="F">Female</option>
               </select>
