add code review content

--- a/frontend/createRoom.html
+++ b/frontend/createRoom.html
@@ -44,5 +44,6 @@
 
       <button type="submit" onclick="submit()">Submit</button>
     </form>
+    <script src="createRoom.js"></script>
   </body>
 </html>
